1999-09-25  Ben Elliston  <bje@cygnus.com>

	* autoconf.texi (AC_FUNC_SETVBUF): Do not mention which systems
	might have their setvbuf() arguments reordered. It's difficult to
	accurately determine and is not essential. Fix for autoconf/7.

	* acgeneral.m4 (AC_LINK_FILES): Emit an error if an incorrect
	number of arguments are collected. Fix for autoconf/10.

1999-09-24  Ben Elliston  <bje@cygnus.com>

	* acspecific.m4 (AC_HEADER_STDC): Define ISLOWER and ISUPPER
	macros correctly on EBCDIC systems. Contributed by Kurt D.
	Zeilenga <kurt@openldap.org>. Fix for autoconf/6.

1999-09-24  Jim Blandy  <jimb@zwingli.cygnus.com>

	* acspecific.m4 (AC_C_VOLATILE): New test.
	* acconfig.h: Add new entry for `volatile'.
	* autoconf.texi (C Compiler Characteristics): Document it.

1999-09-24  Ben Elliston  <bje@cygnus.com>

	* autoreconf.sh: Do not run autoheader if AC_CONFIG_HEADER is
	commented out in configure.in. Reported by Erez Zadok
	<ezk@cs.columbia.edu> as a fix for autoconf/21.

	* install.texi: Replace `can not' with `cannot'.

1999-09-22  Ben Elliston  <bje@cygnus.com>

	* config.guess: Clear the CCOPTS environment variable before
	invoking the C compiler on HP-UX. This is necessary to guarantee
	that the test program is compiled correctly. Reported by Dietmar
	P. Schindler <schd@mra.man.de>.

1999-09-22  Linas Vepstas  <linas@linas.org>

	* config.guess: Add OS/390 match pattern.
	* config.sub: Add mvs, openedition targets.

1999-09-21  Nick Clifton  <nickc@cygnus.com>

	* config.sub: Add fr30 target.

1999-09-21  Ben Elliston  <bje@cygnus.com>

	* configure.in: Check if an appropriate version of GNU m4 is
	installed at configure-time rather than at runtime. From Pavel
	Roskin <pavel_roskin@geocities.com>. Fix for autoconf/2.
	* configure: Regenerate.

1999-09-20  Ben Elliston  <bje@cygnus.com>

	* autoheader.sh: Bourne shell compatibility fix. From Pavel Roskin
	<pavel_roskin@geocities.com>.
	
1999-09-17  Ben Elliston  <bje@cygnus.com>
